styles.css
body {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    height: 100vh;
    background-color: blue;
    margin: 0%;
    padding: 3% 15%;
    background-image: linear-gradient(222deg, rgba(17, 39, 238, 0.60) 8.85%, rgba(241, 101, 101, 0.40) 100%),url(images/pexels-photo-2524370.jpeg);
    background-size: cover;
    background-repeat: no-repeat;
}



h1, h3, p {
    font-family: 'Nunito', sans-serif;
    color: #ffffff;
    margin: 0;
}

/* -------------------- */
/* Hero title css */
/* -------------------- */



.hero-content {
    position: relative;
    text-align: center;
    align-items: center;
    padding: 5% 0%;
    z-index: 1;
    
}

.headline {
    font-weight: 1000;
    text-shadow: 8px 10px 10px rgba(0, 0, 0, 0.65);
}

.date-venue {
    margin-top: 5%;
    font-weight: 800;

}

@media (min-width: 0px) and (max-width: 575px) {
    
    body {
        display: flex;
        flex-direction: column;
        justify-content: space-between;
        height: 100vh;
        margin: 0%;
        padding: 3% 10%;
    }

    .hero-content {
        position: relative;
        text-align: left;
        align-items: center;
        padding: 5% 0%;
        z-index: 1;
        
    }

    .headline {
        font-weight: 800;
        text-shadow: 8px 10px 10px rgba(0, 0, 0, 0.65);
    }

    .date-venue {
        margin-top: 15%;
        font-weight: 600;
    
    }

}

@media (min-width: 576px) and (max-width: 767px) {
    
    body {
        display: flex;
        flex-direction: column;
        justify-content: space-between;
        height: 100vh;
        margin: 0%;
        padding: 3% 10%;
    }

    .hero-content {
        position: relative;
        text-align: left;
        align-items: center;
        padding: 5% 0%;
        z-index: 1;
        
    }

    .headline {
        font-weight: 800;
        text-shadow: 8px 10px 10px rgba(0, 0, 0, 0.65);
    }

    .date-venue {
        margin-top: 15%;
        font-weight: 600;
    
    }

}


/* -------------------- */
/* Host Container css */
/* -------------------- */


.host-container {
    display: flex;
    flex-direction: row;
}

.host-entry {
    display: flex;
    gap: 16px;
    width: 60%;
    flex-direction: column;
    text-align: center;
    align-items: center;
}

.host-logo {
    width: 70px;
    height: 70px;
}

.host-labels {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
}

.year {
    font-size: 1.5rem;
}

.host-name {
    width: 70%;
    font-weight: 200;

}

@media (min-width: 0px) and (max-width: 575px) {
    
    .host-container {
        display: flex;
        flex-direction: column;
        margin-top: 5%;
        margin-bottom: 0%;
    }
    
    .host-entry {
        display: flex;
        gap: 8px;
        width: 100%;
        flex-direction: row;
        margin-bottom: 40px;
    }
    
    .host-logo {
        width: 70px;
        height: 70px;
    }
    
    .host-labels {
        display: flex;
        flex-direction: column;
        align-items: flex-start;
        gap: 8px;
        width: 100%;
    }
    
    .year {
        font-size: 1rem;
        text-align: left;
    }
    
    .host-name {
        width: 100%;
        font-weight: 200;
        font-size: 1rem;
        text-align: left;
    
    }

}



/* -------------------- */
/* Sticky Container css */
/* -------------------- */


.sticky {
    display: flex;
    background-color: black;
    padding: 8px;
    border-radius: 4px;
    justify-content: center;
    margin-top: 0;
}

.contact {
    display: flex;
    align-items: center;
    gap: 40px;
}

@media (min-width: 0px) and (max-width: 575px) {
    
    .sticky {
        display: flex;
        background-color: black;
        padding: 4px;
        border-radius: 4px;
        justify-content: center;
        margin-top: 0;
    }
    
    .contact {
        display: flex;
        flex-direction: column;
        text-align: center;
        align-items: center;
        gap: 16px;
    }
    

}

/* -------------------- */
/* Video Container css */
/* -------------------- */

.video-here {
    position: absolute;
    right: 0;
    bottom: 0;
    background-image: linear-gradient(rgba(12,3,51,0.3),rgba(12,3,51,0.3),);
    z-index: -1;
}

